@@ -1,17 +1,17 @@
 program toposhadows
 !***********************************************************************
 ! calculates horizon for every location and every azimuth
-! written by Norbert Schorghofer 2010-2015
+! written by Norbert Schorghofer 2010-2016
 !***********************************************************************
   use filemanager, only : NSx,NSy,fileext,dx,dy,RMAX
   use allinterfaces
   implicit none
   real(8), parameter :: pi=3.1415926535897932, d2r=pi/180.
   integer i, j, k, ext, narg
-  integer, parameter :: nres=360   ! # of azimuths
+  integer, parameter :: nres=180      ! # of azimuths
   real(8) h(NSx,NSy), azSun, smax(nres)
   character(5) extc
-
+  
   narg = COMMAND_ARGUMENT_COUNT()
   print *,'narg=',narg
   
@@ -22,23 +22,27 @@ program toposhadows
   print *,'# domain size =',NSx*dx,'x',NSy*dy
   print *,'# azimuth rays = ',nres
   print *,'# fully sampled radius =',min(dx,dy)*nres/(2*pi)
-  print *,'# cutoff radius RMAX =',RMAX  
+  print *,'# cutoff radius RMAX =',RMAX
 
   if (narg==0) then  ! serial implementation
      print *,'...creating file horizons.dat...'
      open(unit=21,file='horizons.dat',status='unknown',action='write')
-     
+
      do i=2,NSx-1
         print *,i
         do j=2,NSy-1
+           call findallhorizon(h,i,j,nres,smax)
            do k=1,nres
               azSun = 360./real(nres)*(k-1)*d2r
-              call findonehorizon(h,i,j,azSun,smax(k))
+              !write(32,'(2(i4,1x),1x,f4.0,2x,f6.4)') i,j,azSun/d2r,smax(k)
+              !call findonehorizon(h,i,j,azSun,smax(k))
               !write(31,'(2(i4,1x),1x,f4.0,2x,f6.4)') i,j,azSun/d2r,smax(k)
+              !call findonehorizon_wsort(h,i,j,azSun,smax(k),visibility)
            end do
            !write(21,'(2(i4,1x),9999(1x,f6.4))') i,j,smax(:)
            write(21,'(2(i4,1x))',advance='no') i,j
            call compactoutput(21,smax,nres)
+
         enddo
      enddo
 
@@ -53,10 +57,7 @@ program toposhadows
      i = ext  ! replaces loop over i=2,...,NSx-1
      print *,i
      do j=2,NSy-1
-        do k=1,nres
-           azSun = 360./real(nres)*(k-1)*d2r
-           call findonehorizon(h,i,j,azSun,smax(k))
-        enddo
+        call findallhorizon(h,i,j,nres,smax)
         !write(21,'(2(i4,1x),9999(1x,f6.4))') i,j,smax(:)
         write(21,'(2(i4,1x))',advance='no') i,j
         call compactoutput(21,smax,nres)
