@@ -1,5 +1,9 @@
 ChangeLog
 
+2 Aug 2017: first implementation of multigrid method for horizons calculation
+
+1 Aug 2017: finished subroutine grep findallhorizon, which replaces findonehorizon in shadows.f90
+
 16 Jul 2017: Release v1.1.3  doi:10.5281/zenodo.830052
 
 20 Oct 2016: Release v1.1.2  doi:10.5281/zenodo.162490
